setup app for heroku

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -8,8 +8,8 @@
     <div>    {{>header}}
     WeLcOmE tO {{name}}'s wEbPaGe
     <form>
-      <input placeholder="poofter">
-      <button>rapist</button>
+      <input placeholder="search text...">
+      <button>Button</button>
     </form>
 
 <p id="message-1"></p>
