add about page text

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -4,6 +4,7 @@
   </head>
   <body>
    <div>{{>header}}
+     <p>This site was created by g4yboi69. It uses data from mapbox.com and darksky.net</p>
   <img class="portrait" src="/img/profilePic.png" /></div>
   {{>footer}}
   </body>
